styles/pages/menus-pages/quick-and-ready/cinnamon-roll.css
.page-content {
  display: grid;
  grid-template-columns: 100%;
}

.product-description > h1 {
  margin-top: 16px;
  margin-bottom: 8px;
}

.product-description {
  display: flex;
  flex-direction: column;
}

.breadcrumbs {
  order: -2;
}

.product-description > img {
  order: -1;
}

.nutrition-information > table {
  width: 100%;
}

/********** START TABLET MEDIA QUERY **********/
@media screen and (min-width: 768px) and (max-width: 1024px) {
  img {
    height: 396px;
    object-fit: cover;
  }

  .product-description > h1 {
    margin-top: 24px;
    margin-bottom: 16px;
  }
}
/********** END TABLET MEDIA QUERY **********/

/********** START DESKTOP MEDIA QUERY **********/
@media screen and (min-width: 1024px) {
  .product-description {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  .product-description > img {
    grid-column: 1/2;
    max-width: 100%;
    margin: 0;
  }

  .product-details {
    text-align: center;
    background-color: rgb(32, 32, 32);
    color: white;
    padding: 10%;

    display: flex;
    flex-direction: column;
    justify-content: center;
  }
}
/********** END DESKTOP MEDIA QUERY **********/

